# campscan-codex

./: README.md  pyproject.toml
src/campscan/: __init__.py  app.py  scanner.py
tests/: test_scanner.py
